IVYPORTAL-7983: Refactor Task Template to Serenity - fixed style on firefox

--- a/AxonIvyPortal/PortalTemplate/webContent/resources/css/template.css
+++ b/AxonIvyPortal/PortalTemplate/webContent/resources/css/template.css
@@ -185,9 +185,8 @@
 }
 
 .task-template-content {
-	margin-top: 15px;
+	margin: 10px auto;
 	position: relative;
-	margin-bottom: 10px;
 }
 
 .task-template-tasks-command {
